--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Interactieve H5P</title>
-    <script src="https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/main.bundle.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/styles.css">
+    https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/main.bundle.js
+    https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/styles.css
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,7 +22,19 @@
     <div id="h5p-container"></div>
 
     <script>
-        new H5PStandalone.H5P(document.getElementById('h5p-container'), 'image-hotspots-75790.h5p');
+        // Functie om URL-parameter op te halen
+        function getH5PFileFromURL() {
+            const params = new URLSearchParams(window.location.search);
+            return params.get('file');
+        }
+
+        const h5pFile = getH5PFileFromURL();
+
+        if (h5pFile) {
+            new H5PStandalone.H5P(document.getElementById('h5p-container'), h5pFile);
+        } else {
+            document.getElementById('h5p-container').innerHTML = "<p style='color:red;'>Geen H5P-bestand opgegeven. Voeg ?file=bestandsnaam.h5p toe aan de URL.</p>";
+        }
     </script>
 </body>
 </html>
