--- a/index.html
+++ b/index.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Interactieve H5P</title>
-    https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/main.bundle.js
-    https://cdn.jsdelivr.net/npm/h5p-standalone@1.3.0/dist/styles.css
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-        #h5p-container {
-            width: 100%;
-            max-width: 800px;
-            margin: auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>H5P Viewer</title>
+  https://cdn.jsdelivr.net/gh/tunapanda/h5p-standalone@master/dist/main.bundle.js
+  https://cdn.jsdelivr.net/gh/tunapanda/h5p-standalone@master/dist/styles/h5p.css
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+    }
+    #h5p-container {
+      max-width: 960px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-    <h1>Mijn H5P Interactieve Content</h1>
-    <div id="h5p-container"></div>
+  <div id="h5p-container"></div>
+  <script>
+    new H5PStandalone.H5P(document.getElementById('h5p-container'), {
+      h5pJsonPath: "https://storage.googleapis.com/ai-studio-bucket-365552126524-us-west1/image-hotspots-75790.h5p"
+    });
+  </script>
+</body>
+</html>
 
-    <script>
-        function getH5PFileFromURL() {
-            const params = new URLSearchParams(window.location.search);
-            return params.get('file');
-        }
 
         const h5pFile = getH5PFileFromURL();
 
